src/styles/mixins.styl
dark-color()
  color $color1
  background-color $color4

light-color()
  color $color4
  background-color $color1

button()
  $button-height =  (96 / 3 vh)
  $button-width =  $button-height * 2

  display block
  position absolute
  top 0
  right 0
  bottom 0
  left 0
  margin auto
  max-width 100%
  width $button-width
  height $button-height

  .icon
    display block
    position relative
    margin auto
    width 24vh
    height 24vh
    line-height 24vh
    font-size 12vh
    border-radius 50%
    overflow hidden

    &:focus, &:hover, &:active
      text-decoration: none

    &:before  // font-awesome icons
      display inline
      vertical-align top
      line-height ($button-height * 3 / 4)

  .label
    font-family $font1, sans-serif
    display block
    position absolute
    top 75%
    right 0
    bottom 0
    left 0
    margin auto
    width 100%
    height 25%
    line-height ($button-height * 1 / 4)

  &:focus, &:hover, &:active
    .label
      text-decoration: underline

dark-button()
  button()
  dark-color()

  .icon
    dark-color()

  .label
    dark-color()

  &:focus, &:hover, &:active
    .icon
      light-color()

light-button()
  button()
  light-color()

  &:focus, &:hover, &:active
    .icon
      dark-color()

  .icon
    light-color()

  .label
    light-color()

